oplk/edrv.h

//------------------------------------------------------------------------------
// const defines
//------------------------------------------------------------------------------
#define EDRV_MAX_MTU            1500
#define EDRV_MIN_MTU            46
#define EDRV_ETH_HDR_OFFSET     0   // Ethernet header at the top of the frame
#define EDRV_ETH_HDR_SIZE       14  // size of Ethernet header
#define EDRV_ETH_CRC_SIZE       4   // size of Ethernet CRC, i.e. FCS
#define EDRV_MAX_ETH_SIZE   (EDRV_MAX_MTU + EDRV_ETH_HDR_SIZE)  // without CRC
#define EDRV_MIN_ETH_SIZE   (EDRV_MIN_MTU + EDRV_ETH_HDR_SIZE)  // without CRC
#define EDRV_FILTER_CHANGE_VALUE                0x01  // filter value changed
#define EDRV_FILTER_CHANGE_MASK                 0x02  // filter mask changed
#define EDRV_FILTER_CHANGE_STATE                0x04  // filter state changed
#define EDRV_FILTER_CHANGE_AUTO_RESPONSE        0x08  // filter auto-resp. state changed
#define EDRV_FILTER_CHANGE_AUTO_RESPONSE_DELAY_DEF  EDRV_FILTER_CHANGE_AUTO_RESPONSE_DELAY
#define EDRV_FILTER_CHANGE_AUTO_RESPONSE_DELAY_DEF  0
#define EDRV_FILTER_CHANGE_ALL  (0 \
                                | EDRV_FILTER_CHANGE_VALUE \
                                | EDRV_FILTER_CHANGE_MASK \
                                | EDRV_FILTER_CHANGE_STATE \
                                | EDRV_FILTER_CHANGE_AUTO_RESPONSE \
                                | EDRV_FILTER_CHANGE_AUTO_RESPONSE_DELAY_DEF \
                                )
#define CONFIG_EDRV_USE_DIAGNOSTICS             FALSE
#define CONFIG_EDRV_CYCLIC_USE_DIAGNOSTICS      FALSE
#define EDRV_CYCLIC_SAMPLE_NUM                  501
#define EDRV_USE_TTTX                           FALSE
//------------------------------------------------------------------------------
// Type definitions
//------------------------------------------------------------------------------
typedef struct sEdrvTxBuffer tEdrvTxBuffer;
typedef struct sEdrvRxBuffer tEdrvRxBuffer;
/**
\brief Enumeration for Rx buffer release

This enumeration lists the Rx buffer release commands.
*/
typedef enum
{
    kEdrvReleaseRxBufferImmediately = 0x00, ///< Release the Rx buffer immediately
    kEdrvReleaseRxBufferLater       = 0x01  ///< The Rx buffer is released later
} tEdrvReleaseRxBuffer;
/// Callback function pointer for Rx frames
typedef tEdrvReleaseRxBuffer (*tEdrvRxHandler)(tEdrvRxBuffer* pRxBuffer_p);
/// Callback function pointer for Tx frames
typedef void (*tEdrvTxHandler)(tEdrvTxBuffer* pTxBuffer_p);
/// Callback function pointer for Edrv cyclic sync
typedef tOplkError (*tEdrvCyclicCbSync)(void);
/// Callback function pointer for Edrv cyclic error
typedef tOplkError (*tEdrvCyclicCbError)(tOplkError errorCode_p, tEdrvTxBuffer* pTxBuffer_p);
/// Callback function pointer for hres timer callback function
typedef void (*tHresCallback)(tTimerHdl* pTimerHdl_p);
/**
\brief Enumeration for Rx buffer transfer state

This enumeration lists the transfer state of the Rx buffer.
Note that the Ethernet controller must support early Rx interrupts to access
the first or middle data of a frame!
*/
typedef enum
{
    kEdrvBufferFirstInFrame     = 0x01, ///< First data of frame received
    kEdrvBufferMiddleInFrame    = 0x02, ///< Middle data of frame received
    kEdrvBufferLastInFrame      = 0x04  ///< Last data of frame received
} tEdrvBufferInFrame;
/**
\brief Union for Tx buffer number

This union is used to identify the Tx buffer in the Ethernet driver module.
*/
typedef union
{
    UINT    value;                      ///< Number of the TX buffer
    void*   pArg;                       ///< Pointer to the TX buffer
} tEdrvTxBufferNumber;
/**
\brief Structure for Tx buffer

This structure is the Tx buffer descriptor.
*/
struct sEdrvTxBuffer
{
    UINT                txFrameSize;    ///< Size of Tx frame (without CRC)
    UINT32              timeOffsetNs;   ///< Tx delay to a previously sent frame [ns]
    UINT32              timeOffsetAbs;  ///< Absolute Tx time [ticks]
    UINT64              launchTime;     ///< Launch time of frame [ns]
    tEdrvTxHandler      pfnTxHandler;   ///< Tx callback function
    tEdrvTxBufferNumber txBufferNumber; ///< Edrv Tx buffer number
    UINT8*              pBuffer;        ///< Pointer to the Tx buffer
    UINT                maxBufferSize;  ///< Maximum size of the Tx buffer
};
/**
\brief Structure for Rx buffer

This structure is the Rx buffer descriptor.
*/
struct sEdrvRxBuffer
{
    tEdrvBufferInFrame  bufferInFrame;  ///< Position of Rx buffer in a frame
    UINT                rxFrameSize;    ///< Size of Rx frame (without CRC)
    UINT8*              pBuffer;        ///< Pointer to the Rx buffer
    tTimestamp*         pRxTimeStamp;   ///< Pointer to Rx time stamp
};
/**
\brief Structure for initialization

This structure is used to initialize the Ethernet driver module.
*/
typedef struct
{
    UINT8           aMacAddr[6];        ///< Ethernet controller MAC address
    tEdrvRxHandler  pfnRxHandler;       ///< Rx frame callback function pointer
    tHwParam        hwParam;            ///< Hardware parameter
} tEdrvInitParam;
/**
\brief Structure for Rx filter

This structure is used to control the Rx filters.
*/
typedef struct
{
    UINT            handle;             ///< Handle to Rx filter
    BOOL            fEnable;            ///< Enable the Rx filter
    UINT8           aFilterValue[22];   ///< Rx filter values
    UINT8           aFilterMask[22];    ///< Rx filter mask
    tEdrvTxBuffer*  pTxBuffer;          ///< Tx frame to be transmitted when filter matches
#if (EDRV_FILTER_WITH_RX_HANDLER != FALSE)
    tEdrvRxHandler  pfnRxHandler;       ///< Rx frame callback function pointer for this filter
#endif
} tEdrvFilter;